crucible-llvm-cli/test-data/ub/011.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/ub/011.cbl:7:5: error: in main
  Error during memory load
  cnoSatisfyingWrite@0:b
COUNTEREXAMPLE
